Archive/Old/192.168.224.191/scans/tcp445/smbmap-share-permissions.md

    ________  ___      ___  _______   ___      ___       __         _______
   /"       )|"  \    /"  ||   _  "\ |"  \    /"  |     /""\       |   __ "\
  (:   \___/  \   \  //   |(. |_)  :) \   \  //   |    /    \      (. |__) :)
   \___  \    /\  \/.    ||:     \/   /\   \/.    |   /' /\  \     |:  ____/
    __/  \   |: \.        |(|  _  \  |: \.        |  //  __'  \    (|  /
   /" \   :) |.  \    /:  ||: |_)  :)|.  \    /:  | /   /  \   \  /|__/ \
  (_______/  |___|\__/|___|(_______/ |___|\__/|___|(___/    \___)(_______)
 -----------------------------------------------------------------------------
     SMBMap - Samba Share Enumerator | Shawn Evans - ShawnDEvans@gmail.com
                     https://github.com/ShawnDEvans/smbmap

[\] Checking for open ports...[|] Checking for open ports...[/] Checking for open ports...[*] Detected 1 hosts serving SMB
[-] Checking for open ports...[\] Checking for open ports...[|] Checking for open ports...[/] Checking for open ports...[-] Checking for open ports...                                                                [\] Authenticating......[|] Authenticating......[/] Authenticating......[-] Authenticating......[\] Authenticating......[|] Authenticating......[/] Authenticating......[-] Authenticating......[\] Authenticating......[|] Authenticating......[/] Authenticating......[-] Authenticating......[\] Authenticating......[|] Authenticating......[/] Authenticating......[-] Authenticating......[\] Authenticating......[|] Authenticating......[/] Authenticating......[-] Authenticating......[\] Authenticating......[|] Authenticating......[*] Established 0 SMB session(s)
[/] Authenticating......[-] Authenticating......
